<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_content"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.HouseFragment" >
    
    <View android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/center"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/tvHouseCaption"
        style="@style/DataKey"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ellipsize="marquee"
        android:maxLines="1"
        android:text="@string/house_addr_placeholder"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imHouseImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvHouseCaption"
        android:contentDescription="House thumbnail"
        android:scaleType="centerCrop"
        android:src="@drawable/generic_house_big" />

    <TextView
        android:id="@+id/tvHousePrice"
        style="@style/DataKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvPriceLabel"
        android:layout_toRightOf="@+id/center"
        android:text="$1,000,000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvHouseOwnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvUnavailableMessage"
        android:text="@string/owned_by"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSlotsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvHouseOwnerLabel"
        android:text="@string/slots_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSlotsLabel"
        android:text="@string/price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvHouseSlots"
        style="@style/DataKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvSlotsLabel"
        android:layout_alignBottom="@+id/tvSlotsLabel"
        android:layout_alignLeft="@+id/tvHousePrice"
        android:text="5 slots"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvUnavailableMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imHouseImage"
        android:text="@string/house_unavailable_warn"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:textColor="@color/red" />

    <TextView
        android:id="@+id/tvHouseOwner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvHouseOwnerLabel"
        android:layout_alignBottom="@+id/tvHouseOwnerLabel"
        android:layout_alignLeft="@+id/tvHouseSlots"
        android:text="@string/empty"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>